clusters/home/apps/authelia/00-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: authelia
  labels:
    app: authelia
