clusters/home/apps/authelia/middleware.yml
# Traefik ForwardAuth Middleware for Authelia
#
# To protect an app, add this annotation to its Ingress:
#   traefik.ingress.kubernetes.io/router.middlewares: authelia-authelia-forwardauth@kubernetescrd
#
# Format: <namespace>-<middleware-name>@kubernetescrd
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: authelia-forwardauth
  namespace: authelia
  labels:
    app: authelia
spec:
  forwardAuth:
    address: http://authelia-svc.authelia.svc.cluster.local:9091/api/authz/forward-auth

    trustForwardHeader: true
    authResponseHeaders:
      - Remote-User
      - Remote-Groups
      - Remote-Email
      - Remote-Name
